samples/_failures_safe/1761480260_2fc3a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db91b653.c: In function ‘main’:
./samples/SAFE/__tmp_db91b653.c:168:39: error: missing terminating ' character
  168 |     if (len > 0 && buffer[len - 1] == '\
      |                                       ^~
./samples/SAFE/__tmp_db91b653.c:168:5: error: expected expression at end of input
  168 |     if (len > 0 && buffer[len - 1] == '\
      |     ^~
./samples/SAFE/__tmp_db91b653.c:168:5: error: expected declaration or statement at end of input
